...
        
            statistics.store(totalCurrent: self.questionsAmount, correctCurrent: correctAnswers)
            
            let averageAccuracy = String(format: "%.2f", statistics.totalAccuracy)

            let result = QuizResultsViewModel(
                    title: "Этот раунд окончен!",
                    text: """
                          Ваш результат: \(correctAnswers)/\(self.questionsAmount)
                          Количество сыгранных квизов: \(statistics.gamesCount)
                          Рекорд: \(record)
                          Средняя точность: \(averageAccuracy)%
                        """,
...
